[package]
name = "pirate-tp"
version = "0.0.0"
authors = ["Zac Delventhal"]
description = "Pirate Talk TP implemented in Rust"
homepage = "https://github.com/delventhalz/pirate-talk"

[dependencies]
clap = "2"
sawtooth_sdk = { git = "https://github.com/hyperledger/sawtooth-core.git" }
zmq = { git = "https://github.com/erickt/rust-zmq", branch = "release/v0.8" }

[build-dependencies]
protoc-rust = "2"
